    as objects. XSB 3.3 or a later version is now required for compatibility
    with Logtalk.

    Updated the SWI-Prolog config file in order to provide limited support
    for the arithmetic_function/1 proprietary directive (arithmetic functions
    are compile as global instead of as local to the objects or categories
    defining them).

    Updated the "xml_parser" contribution in order to workaround portability
    issues with Qu-Prolog and XSB.

    Updated the "encodings" example in order to ensure that the there is no
    whitespace before the encoding/1 directive.

    Updated the "attvars" example in order to support B-Prolog and XSB. Also
    added support for using attributed variables within Logtalk parametric
    objects and parametric categories. Thanks to Jan Wielemaker, Vítor Santos
    Costa, and Bart Demoen for feedback and implementation suggestions.

    Updated the "profilers" example with preliminary support for the changes
    to execution profiling in the SICStus Prolog 4.2 version.

    Updated the "expansion" example with more sample code on how to combine
    term- and goal-expansion definitions from different hooks objects.

    Updated the "coinduction" example, adding an experimental keysort/2
    coinductive predicate. Thanks to Jan Burse for the suggestion.


2.42.3 - February 21, 2011

    Allow dynamic predicates declared in a category to be called in "this"
    from within the category. In previous versions, such calls would result
    in a compile-time error, forcing these predicates to be called in "self"
    (using the ::/1 message sending control construct).

    Added Logtalk compiler support for pre-compiled clause heads (using the
    {}/1 control construct). This feature is mostly useful when using the
    term-expansion mechanism.

    Corrected a bug on the code that simplifies the predicate clauses
    generated by the compilation of grammar rules. The code would loop